# MicroMarket-

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/backend/: config.py  security.py  session.py
app/migrations/: env.py
app/migrations/versions/: 1bc495f2b0db_add_cascading_delete_for_products_in_.py  8dd06da6240a_second_commit.py  d1d5f146cc9a_first_commit.py  e9facf3e8e92_add_cascading_delete_for_products_in_.py
app/models/: category.py  feedback.py  products.py  rating.py  user.py
app/routers/: auth.py  category.py  permission.py  products.py  rating.py
app/schemas/: auth.py  category.py  product.py  rating.py  user.py
app/services/: auth.py  category.py  product.py  rating.py
